@@ -5,11 +5,12 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-
 import java.io.IOException;
+import java.util.List;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter {
@@ -29,11 +30,26 @@ public class JwtFilter extends OncePerRequestFilter {
 
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             String token = authHeader.substring(7);
-            String username = jwtUtil.extractUsername(token);
 
-            if (username != null && !jwtUtil.isTokenExpired(token)) {
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(username, null, java.util.Collections.emptyList());
-                SecurityContextHolder.getContext().setAuthentication(auth);
+            try {
+                String username = jwtUtil.extractUsername(token);
+                String role = jwtUtil.extractUserType(token);
+
+                if (username != null && !jwtUtil.isTokenExpired(token)) {
+
+                    // Agregar el rol desde el token
+                    var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
+
+                    UsernamePasswordAuthenticationToken auth =
+                            new UsernamePasswordAuthenticationToken(username, null, authorities);
+
+                    SecurityContextHolder.getContext().setAuthentication(auth);
+
+                    System.out.println(">>> Usuario autenticado: " + username + " | Rol: " + role);
+                }
+
+            } catch (Exception e) {
+                System.out.println(">>> Error al procesar el token JWT: " + e.getMessage());
             }
         }
 
